--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
       <div class="animation">
         <div class="row align-items-center">
           <div class="col-lg-12 col-12 text-center mt-5">
-            <p class="fw-bolder fs-2 text-animation first">WellCome !</p>
+            <!-- <p class="fw-bolder fs-2 text-animation first">WellCome !</p> -->
 
-            <p class="fw-bolder fs-2 mb-5 text-animation second">
+            <!-- <p class="fw-bolder fs-2 mb-5 text-animation second">
               Monkey Pox Cases Worldwide
-            </p>
+            </p> -->
           </div>
         </div>
 
         <div class="row align-items-center mt-5">
-          <div class="col-lg-12 col-12 text-center ">
-              <p class="fw-bolder fs-3 mt-5 text-animation-power first">Powerd by</p>
-              <img src="Logo/logo.png" class="App-log-head an-image text-animation-power second" alt="logo" />
+          <div class="col-lg-12 col-12 text-center mt-5  app-load">
+              <!-- <p class="fw-bolder fs-3 mt-5 text-animation-power first">Powerd by</p> -->
+              <img src="Logo/logo.png" class="App-log-head an-image  mt-5 text-animation-power first " alt="logo" />
           </div>
         </div>
       </div>
