--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             seamless="seamless"
             class="viewer pbi-frame"
             style="width: 100%; height: 840px"
-            src="https://app.powerbi.com/view?r=eyJrIjoiNzg5MTc0Y2MtNWRkNS00NzcxLWJhZGUtY2JmNWQ5YzY3MmI4IiwidCI6IjZmNzZlOWUyLTY5NzUtNDA2YS1hYjcxLWQ3NjAyOTQyODNjMSIsImMiOjEwfQ%3D%3D&pageName=ReportSection0e691b229890260e8c26"
+            src="https://app.powerbi.com/view?r=eyJrIjoiOTJjMjBmYTUtMjYwMC00YzFhLWE0NTctOTUwZTA1Zjg4YWU0IiwidCI6IjZmNzZlOWUyLTY5NzUtNDA2YS1hYjcxLWQ3NjAyOTQyODNjMSIsImMiOjEwfQ%3D%3D"
           >
           </iframe>
         </div>
