chnage header names

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="row">
           <div class="col-lg-6 col-12 mt-5">
-            <p class="fw-bolder mb-5">Country wise Total cases</p>
+            <p class="fw-bolder mb-5"> Total cases (Country)</p>
 
             <div
               id="reportContainer"
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-lg-6 col-12 mt-5">
 
-            <p class="fw-bolder mb-5">Cities Which have Highest Numbers of Cases</p>
+            <p class="fw-bolder mb-5">Total cases (city)</p>
             <div
               id="reportContainer"
               class="graph-box shadow-row"
@@ -129,7 +129,7 @@
           </div>
 
           <div class="col-lg-6 col-12 mt-5">
-            <p class="fw-bolder mb-5">Travel History Gender Wise</p>
+            <p class="fw-bolder mb-5">Travel History (Gender)</p>
 
             <div
               id="reportContainer"
@@ -151,7 +151,7 @@
         <div class="row ">
          
           <div class="col-lg-6 col-12 mt-5">
-            <p class="fw-bolder mb-5">Country-wise Hospitalized Cases</p>
+            <p class="fw-bolder mb-5">Hospitalized Cases (Country)</p>
 
             <div
               id="reportContainer"
@@ -170,7 +170,7 @@
           </div>
 
           <div class="col-lg-6 col-12 mt-5">
-            <p class="fw-bolder mb-5">Country-wise Travel History</p>
+            <p class="fw-bolder mb-5">Travel History (Country)</p>
 
             <div
               id="reportContainer"
@@ -212,7 +212,7 @@
 
           <div class="col-lg-6 col-12 mt-5">
 
-            <p class="fw-bolder mb-5">Word Cloud of Common Symptoms</p>
+            <p class="fw-bolder mb-5">Common Symptoms</p>
 
             <div
               id="reportContainer"
@@ -252,7 +252,7 @@
           </div>
 
           <div class="col-lg-6 col-12 mt-5">
-            <p class="fw-bolder mb-5">Confirmed Cases Having Travel History</p>
+            <p class="fw-bolder mb-5">Confirmed Cases (Travel History)</p>
 
             <div
               id="reportContainer"
